# velvet-noise-reverberation

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: audio_data.md
notebooks/: results.ipynb
results/: raw_data.csv
scripts/: generate_stimulus.py
src/analytics/: metrics.py  spectrum.py
src/audio/: io.py  processing.py
src/reverb/: envelope.py  noise.py
src/visualization/: plots.py
