[project]
name = "velvet-noise-reverberation"
version = "0.1.0"
description = ""
authors = [
    {name = "almarazj",email = "juan.almaraz097@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "dtw (>=1.4.0,<2.0.0)",
    "pyloudnorm (>=0.1.1,<0.2.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
